[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fact-check-agent"
version = "0.1.0"
description = "CLI agent that fact-checks claims using web search and an LLM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ddgs>=9.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
fact-check = "fact_check_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
